# Silver-Needle

./: .gitignore  README.md  README_zh_CN.md  RELEASE.md  pyproject.toml  pytest.ini
datasets/: info.md
deploy/: Addational-tools.sh  Dockerfile  Dockerfile-opensuse.dockerfile  awk_example.sh  backup_postgres.sh  clash-setup-linux.sh  generate-certs.sh  init-dev-os.sh  init-security.sh  init-storage.sh  init_dev.sh  init_docs_sphinx.sh  init_env.sh  init_multi_tenant.sh  rootless-container.md
deploy/sync_public_repo/: github_action_sync_dashboard.yml  github_action_sync_public.yml
docs/: CONTRIBUTING.md  coding-propmts.md  开发可用工具收集,md  系统设计及使用说明.md
ops/: Addational-tools.sh  clash-setup-linux.sh  generate-certs.sh  init-os.sh  init-storage.sh  init_docs.sh  init_k3s.sh  init_nano_suse_micros.sh  upgrade-suse.sh
silver_studio/: package.json  pnpm-lock.yaml
silver_studio/src-tauri/: Cargo.toml  tauri.conf.json
silver_studio/src-tauri/src/: main.rs
test_hub/scheme/: label_images_endurance.md
test_hub/testsuites/web_functions/: test_device_table.py  test_login.py  test_search.py
test_lib/: fake_users.py  postgres_client.py
test_results/: results.xml
