[project]
name = "Silver-Needle"
version = "0.3.0"
description = "A MLops Testsuits Tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axe-playwright-python>=0.1.4",
    "dearpygui>=2.0.0",
    "faker>=37.1.0",
    "locust>=2.37.1",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "prefect>=3.4.1",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-playwright>=0.7.0",
    "sanic>=25.3.0",
    "streamlit>=1.45.0",
]


[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
